Fix a leak in Touch Bar text suggestions.

Each leaked NSCandidateListTouchBarItem carried a CALayer and other
resources; holding on to them caused a major slowdown.

This change makes |-createCandidateListItem| return an autoreleased
NSCandidateListTouchBarItem instead of a retained one, and renames it to
|-makeCandidateListItem| to match the naming and ownership semantics of
|-makeTouchBar| (and be consistent with the create rule).

Bug: 877137
Change-Id: Icfb335c341cb86e8691562ade4c222a59c990bf7
Reviewed-on: https://chromium-review.googlesource.com/1208428
Reviewed-by: Sarah Chan <spqchan@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589195}
Former-commit-id: 745395c5cd27b8921bc82f66691e7a9ddca07753